--- a/requirements/index1.html
+++ b/requirements/index1.html
@@ -14,18 +14,18 @@
 <body>
     <div id="drag-container">
         <div id="spin-container">
-            <img src="r1.png" alt="">
-            <img src="r2.png" alt="">
-            <img src="r3.png" alt="">
-            <img src="r4.png" alt="">
-             <img src="r5.png" alt="">
-             <img src="r6.png" alt="">
-            <img src="r7.png" alt="">
-            <img src="r8.png" alt="">
-            <img src="r9.png" alt="">
-            <img src="r10.png" alt="">
-            <img src="r11.png" alt="">
-             <img src="r12.png" alt="">
+            <img src="./images/r1.png" alt="">
+            <img src="./images/r2.png" alt="">
+            <img src="./images/r3.png" alt="">
+            <img src="./images/r4.png" alt="">
+             <img src="./images/r5.png" alt="">
+             <img src="./images/r6.png" alt="">
+            <img src="./images/r7.png" alt="">
+            <img src="./images/r8.png" alt="">
+            <img src="./images/r9.png" alt="">
+            <img src="./images/r10.png" alt="">
+            <img src="./images/r11.png" alt="">
+             <img src="./images/r12.png" alt="">
 
             <p>Happy Birthday Mummy🥳</p>
         </div>
