--- a/requirements/index1.html
+++ b/requirements/index1.html
@@ -43,7 +43,7 @@
         <source src="darling_bgm.ogg" type="audio/ogg">
     </audio>
 
-    <script src="mainjs.js"></script>
+    <script src="main.js"></script>
 
     <script>
         window.onload = function() {
